# wanderwise

./: .gitignore  .pre-commit-config.yaml  README.md  ci-cd-pipeline.yml  pyproject.toml
.github/workflows/: close_issue_when_merged.yml  create_new_branch_on_assign
api/tests/: test_default.py
docs/: README.md
